# rs.c

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: sdl2-config.cmake
cmake/Modules/: FindSDL2.cmake
include/: buffer.h  entity.h  game.h  game_defs.h  globals.h  jag_arc.h  math_ops.h  model.h  scene.h  sin_table.h  surface.h
src/: buffer.c  entity.c  game.c  jag_arc.c  main.c  math_ops.c  model.c  sin_table.c  surface.c
